crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_sbf_initial.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ FORMATIONS · Round 0 · PV 138 ─┐╔ Company 1 ═══════════════════╗┌ Lance 1 ───────────────────────┐
│▶ Company 1                     │║▶ Lance 1 ×4                  ║│BM SZ4  MV 3  TMM 1             │
│    SZ4 TMM1 MV3 SK4  Normal    │║    A ████████ 25/25 D7/7/3   ║│Skill 4  PV 69                  │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│Dmg  S7 M7 L3 E2                │
│                                │║                              ║│FLK IF                          │
│                                │║  Lance 2 ×4                  ║│                                │
│                                │║    A ████████ 25/25 D7/7/3   ║│Alpha Strike Elements           │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│ 1 Atlas AS7-D              SK4 │
│                                │║                              ║│ 2 Atlas AS7-D              SK4 │
│                                │║                              ║│ 3 Atlas AS7-D              SK4 │
│                                │║                              ║│ 4 Atlas AS7-D              SK4 │
│                                │║                              ║│                                │
│                                │║                              ║│To-Hit 5+  (Medium vs TMM0)     │
│                                │║                              ║│                                │
│                                │║                              ║│Formation  Normal               │
│                                │║                              ║│TAC 7  MOR 7  PV 138            │
│                                │║                              ║│IF                              │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
└────────────────────────────────┘╚══════════════════════════════╝└────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  t:to-hit  m:morale  n:round  e:done  g:group  r:rename  ,/.:form  ?:help
