crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_sbf_to_hit_modal.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 3344
expression: screen
---
┌ FORMATIONS · Round 0 · PV 69 ──┐╔ Lance 1 ═════════════════════╗┌ Lance 1 ───────────────────────┐
│▶ Lance 1                       │║▶ Lance 1 ×4                  ║│BM SZ4  MV 3  TMM 1             │
│    SZ4 TMM1 MV3 SK4  Normal    │║    A ████████ 25/25 D7/7/3   ║│Skill 4  PV 69                  │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│Dmg  S7 M7 L3 E2                │
│                                │║                              ║│FLK IF                          │
│                   ╔ SBF to-hit ══════════════════════════════════════════════╗                   │
│                   ║  Range                Long (+2)                          ║Elements           │
│                   ║  Indirect fire        [ ]                                ║D              SK4 │
│                   ║  Formation JUMP used  0                                  ║D              SK4 │
│                   ║  Units withholding    0                                  ║D              SK4 │
│                   ║  Spotting for IF      [ ]                                ║D              SK4 │
│                   ║  Secondary target     [ ]                                ║                   │
│                   ║▶ Target TMM           2                                  ║ong vs TMM2)       │
│                   ║  Target JUMP used     0                                  ║                   │
│                   ║  Target evaded        [ ]                                ║rmal               │
│                   ║  Terrain              +0                                 ║ PV 69             │
│                   ║  Aero attack          off                                ║                   │
│                   ║  Aero target          —                                  ║                   │
│                   ║  Behind target (−2)   [ ]                                ║                   │
│                   ║  Cluster bombs (−1)   [ ]                                ║                   │
│                   ║                                                          ║                   │
│                   ║To-Hit   8+   (each firing unit rolls 2d6 ≥ 8)            ║                   │
│                   ║target morale is manual — not a to-hit term (§4.3)        ║                   │
│                   ║[↑↓] select   [←→/space] adjust   [Esc] close             ║                   │
│                   ╚══════════════════════════════════════════════════════════╝                   │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
└────────────────────────────────┘╚══════════════════════════════╝└────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  t:to-hit  m:morale  n:round  e:done  g:group  r:rename  ,/.:form  ?:help
