crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_shutdown.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 2169
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 31 / 30   diss 20                │
                        │██████████│                        │██████████████████████████████████████│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │-5 MP  +4 hit  shutdn 10+  ammo 8+    │
                        │          │                        │** SHUTDOWN **                        │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████│║██████████║│██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     │║R 6/6     ║│R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████│║██████████║│██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   │║I 10/10   ║│I 10/10   ││          ││ ** IMMOBILE **  shutdown             │
│          ││██████████│║██████████║│██████████││          ││ stationary  TMM -4   [v]             │
│          ││          │║          ║│          ││          ││ standing                             │
│          ││          │║          ║│          ││          │└──────────────────────────────────────┘
│          ││          │║          ║│          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20           RT  H7    20         │
            ┌LL────────┐            ┌RL────────┐            │ AC/20 Ammo       2/2                 │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
