crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_skills_modal.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1463
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████│║██████████║│██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6 ╔ Pilot skills ═════════════════════════════════════════════╗───────────────────┘
│██████████││██████║▶ Gunnery    4+                                            ║───────────────────┐
│          ││I 10/1║  Piloting   5+                                            ║p 0                │
│          ││██████║lower is better   [↑↓] select   [←→] adjust   [Esc] close  ║                   │
│          ││      ╚═══════════════════════════════════════════════════════════╝                   │
│          ││          │║          ║│          ││          │└──────────────────────────────────────┘
│          ││          │║          ║│          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
