crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_vehicle_classic_doll.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1658
expression: screen
---
  1:Manticore
                        ╔FR════════╗                        ┌ CRITS ───────────────────────────────┐
                        ║A 20/20   ║                        │ Motive   ok                          │
                        ║██████████║                        │ Engine Weapon Sensors Stabilizer     │
                        ║I 6/6     ║                        │ Turret Fuel Tank Ammo Cargo          │
                        ║██████████║                        │ [c] crits   [m] motive   [p/P] crew  │
                        ║          ║                        │                                      │
                        ╚══════════╝                        │                                      │
            ┌LS────────┐┌TU────────┐┌RS────────┐            └──────────────────────────────────────┘
            │A 20/20   ││A 20/20   ││A 20/20   │            ┌ CREW ────────────────────────────────┐
            │██████████││██████████││██████████│            │ Gunnery 4+   Driving 5+   BV 1897    │
            │I 6/6     ││I 6/6     ││I 6/6     │            │ ░░░░░   crew ok                      │
            │██████████││██████████││██████████│            └──────────────────────────────────────┘
            │          ││          ││          │            ┌ MOVE ────────────────────────────────┐
            └──────────┘└──────────┘└──────────┘            │ Cruise 3  Flank 5                    │
                                                            │ stationary   [v]                     │
                                                            │ mobile                               │
                                                            └──────────────────────────────────────┘
                                                            ┌ WEAPONS / AMMO / EQUIP ──────────────┐
                                                            │ Medium Laser    RA        5          │
                                                            │ AC/20 Ammo       10/10               │
                                                            │                                      │
                        ┌RR────────┐                        │                                      │
                        │A 20/20   │                        │                                      │
                        │██████████│                        │                                      │
                        │I 6/6     │                        │                                      │
                        │██████████│                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
